--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
       <video class="videos" src="promo.mp4" controls></video>
     </div>
     <div class="div3">
-      <h1>14.11.23</h1>
-      <h2>СКОРО</h2>
+      <img src="Безымянныsssй.png" alt="" width="auto" height="398px" />
     </div>
+    <h3>
+      11.11.23 БЫЛ УБИТ ВАЖНЫЙ ДЕПУТАТ. К ЕГО УБИЙСТВУ ПРИЧАСТЕН ЕГО ДРУГ
+      АЛЕКСАНДР АХМЕДОВ. ЕГО МАШИНА БЫЛА ОБНАРУЖЕНА ВОЗЛЕ ДОМА ЖЕРТВЫ. ОДНАКО
+      АХМЕДОВ НЕ ЯВЛЯЕТСЯ УБИЙЦЕЙ. ГЛАВНЫМ ПОДОЗРЕВАЕМЫМ ЯВЛЯЕТСЯ ПАВЕЛ ХРЮШКИН.
+      ОН - ВОДИТЕЛЬ ДАННОЙ МАШИНЫ. ВОЗМОЖНО ОН, СОВЕРША ПРЕСТУПЛЕНИЕ УКРАЛ
+      АВТОМОБИЛЬ И СКРЫЛСЯ
+    </h3>
   </body>
 </html>
